--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "name" : "云",
-    "appid" : "__UNI__9041C41",
+    "appid" : "__UNI__1ED9E36",
     "description" : "",
     "versionName" : "1.0.0",
     "versionCode" : "100",
